--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?pthaxk#1" target="_blank">首页</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/1?rtfusw" target="_blank">动态网</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/2?zbnvsh" target="_blank">大纪元</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/4?nwkoou" target="_blank">看中国</a> | <a href="https://d11leod1im7q2u.cloudfront.net/pHh5q?mzjgiwqsk" target="_blank">新生网</a> | <a href="https://dmt6yqw0je6jw.cloudfront.net/tktpt?rhqdvr" target="_blank">阿波罗网</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/Mjpvu?bmiks" target="_blank">干净世界</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/10?iqrfxwsev" target="_blank">退党服务</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/Rffqf?zjlycfo" target="_blank">明慧广播</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/nw9Vn?xjwbmi" target="_blank">传奇时代</a> | <a href="https://d200ccn4ewjn2r.cloudfront.net/AF9AG?ljlzdq" target="_blank">新境界影视</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/zqMQA?micdeabr" target="_blank">文昭谈论</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/7?hqxygva" target="_blank">明慧</a></p><p><a href="https://d3t1om6knkjnq4.cloudfront.net/9?aifrx" target="_blank">大法</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/3?epyhrj" target="_blank">新唐人</a> | <a href="https://d1u99il8548gs4.cloudfront.net/obAhT?yjjpp" target="_blank">人民报</a> | <a href="https://dgk92ykceobaf.cloudfront.net/xXNHu?ngiztnoyw" target="_blank">放光明</a> | <a href="https://d3bo5docy69ast.cloudfront.net/5?asvftioi" target="_blank">新纪元</a> | <a href="https://d2184d78prq5kd.cloudfront.net/6?hgsovxh" target="_blank">希望之声</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/11?iqejvuci" target="_blank">无界网络</a> | <a href="https://d3gus727acem18.cloudfront.net/Pueji?iacflqckw" target="_blank">追查国际</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/16?sbyqg" target="_blank">明慧之窗</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/LdvzZ?wurhfsew" target="_blank">细语人生</a> | <a href="https://d78f5frq5siq8.cloudfront.net/fBn3r?gsyqevys" target="_blank">新世纪影视</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/PUWMb?kjdvcxk" target="_blank">江峰时刻</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/8?yfajmlf" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?fkuklwm#1" target="_blank">首页</a> | <a href="https://d2oemtubh889hy.cloudfront.net/1?gdtwia" target="_blank">动态网</a> | <a href="https://djwddd4nnr0na.cloudfront.net/2?qlkddw" target="_blank">大纪元</a> | <a href="https://d14a0yccee2yym.cloudfront.net/4?idsujrwf" target="_blank">看中国</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/pHh5q?gcudg" target="_blank">新生网</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/tktpt?ajtkgqpjg" target="_blank">阿波罗网</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/Mjpvu?mnkjm" target="_blank">干净世界</a> | <a href="https://dwzgr3popmlhv.cloudfront.net/10?erromg" target="_blank">退党服务</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/Rffqf?pssqzrxnf" target="_blank">明慧广播</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/nw9Vn?pgbakv" target="_blank">传奇时代</a> | <a href="https://d1cayv19uhqaei.cloudfront.net/AF9AG?kjrvkdjmk" target="_blank">新境界影视</a> | <a href="https://dvsmtoxipy5i5.cloudfront.net/zqMQA?cirhppl" target="_blank">文昭谈论</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/7?pttjvag" target="_blank">明慧</a></p><p><a href="https://d2esw86q58v8t7.cloudfront.net/9?truabyfaw" target="_blank">大法</a> | <a href="https://d35iuueyr80mg8.cloudfront.net/3?joywgzuo" target="_blank">新唐人</a> | <a href="https://d2cenl0crtmzsc.cloudfront.net/obAhT?esndgzsza" target="_blank">人民报</a> | <a href="https://divmj5v44rbg.cloudfront.net/xXNHu?kmvopuk" target="_blank">放光明</a> | <a href="https://dp5vkf7bbqo9d.cloudfront.net/5?hxgrdqdbm" target="_blank">新纪元</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/6?zlxmjdv" target="_blank">希望之声</a> | <a href="https://d2184d78prq5kd.cloudfront.net/11?dornw" target="_blank">无界网络</a> | <a href="https://d15m60lsma25jk.cloudfront.net/Pueji?qonjd" target="_blank">追查国际</a> | <a href="https://dol9bue5bysdj.cloudfront.net/16?fyljx" target="_blank">明慧之窗</a> | <a href="https://d26c5rnrr5nvsd.cloudfront.net/LdvzZ?dwrbjcs" target="_blank">细语人生</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/fBn3r?wngxnd" target="_blank">新世纪影视</a> | <a href="https://dmepc9x6zy689.cloudfront.net/PUWMb?auwbn" target="_blank">江峰时刻</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/8?dugod" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347497.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347503-GettyImages-2176888678-320x200.jpg"><p align="center">石破茂将见李强 日媒吁应对中共政经风险</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347497.md#1" title="石破茂将见李强 日媒吁应对中共政经风险""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/10/id14347503-GettyImages-2176888678-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347499.md#1" title="全美紧急召回近千万磅李斯特菌污染的肉类""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14127287-08252023-DSC08622-CDC-320x200.jpg">&nbsp;</a>
@@ -13,16 +13,16 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346883.md#1" title="从太空直击米尔顿飓风眼 美宇航员发视频""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/10/id14346895-54052840531_b5e02c99fc_o-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346880.md#1" title="巴西最高法院裁定X平台可在该国恢复运营""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/05/id14243813-000_33XX24J-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347470.md#1">OpenAI：更多犯罪分子使用AI模型来影响选举</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347548.md#1">“游戏屋”拍卖会 为无家可归者筹资建房</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347502.md#1">【探索时分】俄国人震惊！苏57首杀 击落苏70</a><br>
-:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347522.md#1">加州提前投票已开始 选民渴望解决民生等问题</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347486.md#1">消息：上合峰会期间巴基斯坦将限制华人活动</a><br>
-:clock8: <em>60分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347497.md#1">石破茂将见李强 日媒吁应对中共政经风险</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347509.md#1">数据显示 十一长假中国游客仍谨慎消费</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347381.md#1">中共报复欧盟白兰地 未提奢侈品 专家怎么看</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347499.md#1">全美紧急召回近千万磅李斯特菌污染的肉类</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347410.md#1">沪指遭新冠爆发后最大跌幅 华尔街股指坚挺</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347469.md#1">【新闻欣视角】A股暴跌背后 股东离场 韭菜接盘</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347470.md#1">OpenAI：更多犯罪分子使用AI模型来影响选举</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347548.md#1">“游戏屋”拍卖会 为无家可归者筹资建房</a><br>
+:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347502.md#1">【探索时分】俄国人震惊！苏57首杀 击落苏70</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347522.md#1">加州提前投票已开始 选民渴望解决民生等问题</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347486.md#1">消息：上合峰会期间巴基斯坦将限制华人活动</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347497.md#1">石破茂将见李强 日媒吁应对中共政经风险</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347509.md#1">数据显示 十一长假中国游客仍谨慎消费</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347381.md#1">中共报复欧盟白兰地 未提奢侈品 专家怎么看</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347499.md#1">全美紧急召回近千万磅李斯特菌污染的肉类</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346022.md#1">宁德时代停产 专家：中国锂电业进入淘汰赛</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346454.md#1">前政治局常委吴邦国病亡 “五不搞”曾引争议</a><br>
@@ -58,6 +58,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347239.md#1">网民爆料：在昆明机场出境时被索要买烟钱</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346727.md#1">军情五处详述英国面对中共等国的安全威胁</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346732.md#1">美中商务部长通话 在国安问题上仍各说各话</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347469.md#1">【新闻欣视角】A股暴跌背后 股东离场 韭菜接盘</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346866.md#1">【新闻大家谈】正国级大佬殁 聚焦北京权力架构</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346885.md#1">山东76岁法轮功学员被枉判5年 狱中遭毒打</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346859.md#1">【时事金扫描】克宫出大事 乌军黑了俄国电视网</a><br>
@@ -105,9 +106,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344335.md#1">【新闻欣视角】大陆流行登革热 新冠卷土重来</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344409.md#1">【新闻看点】习遭剪裙边？军队“监斩官”被贬</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344321.md#1">【菁英论坛】特警击毙公安局长 官官互害时代</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344319.md#1">新华保险前高管被查 “五道口85级”接连出事</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2fhst4xpayn2a.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2fhst4xpayn2a.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,127</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1xezk73bymtn5.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1xezk73bymtn5.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 41,127</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
